--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,4 +4,5 @@ description: A minimal command-line application.
 environment:
   sdk: '>=1.0.0 <2.0.0'
 dependencies:
-  parsejs: any
+  parsejs: "~1.0.3"
+  path: "~1.3.5"
